--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="choice" id="papper">
             <img src="paper.png" alt="" srcset="">
         </div>
-        <div class="choice" id="scissors">
+        <div class="choice" id="scissor">
             <img src="scissors.png" alt="" srcset="">
         </div>
     </div>
@@ -41,6 +41,7 @@
         <p id="resultText">Play your Move</p>
     </div>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
